[gd_scene load_steps=5 format=3 uid="uid://dqbxne3nspjaf"]

[ext_resource type="Texture2D" uid="uid://bx8xsbi60ptkm" path="res://Imagens de Backgorund menu/play load.png" id="1_l5ctc"]
[ext_resource type="Script" path="res://menu_principal.gd" id="1_wv7qp"]
[ext_resource type="PackedScene" uid="uid://cop1g3lxprhax" path="res://menu_de_opcoes.tscn" id="3_xqw5y"]

[sub_resource type="SystemFont" id="SystemFont_nbfm2"]
font_names = PackedStringArray("Poor Richard")

[node name="Menu_Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wv7qp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l5ctc")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Separador2" type="Control" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="pagar_Button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nbfm2")
theme_override_font_sizes/font_size = 32
text = "nos pague uma breja
"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="jogar_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nbfm2")
theme_override_font_sizes/font_size = 48
text = "jogar"

[node name="carregar_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nbfm2")
theme_override_font_sizes/font_size = 48
text = "carregar"

[node name="opcao_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nbfm2")
theme_override_font_sizes/font_size = 48
text = "opções
"

[node name="sair_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nbfm2")
theme_override_font_sizes/font_size = 48
text = "sair
"

[node name="Separador" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="menu_de_opcoes" parent="." instance=ExtResource("3_xqw5y")]
visible = false
layout_mode = 1
